Fixed list spacing

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -49,12 +49,13 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  gap: 16px;
+  gap: 16px; /* so it can be next to LOGO */
+  padding: 0px;
 }
 
 .left, .right {
   display: flex;
   align-items: center;
   margin: 0px;
-  gap: 5px;
+  gap: 8px;
 }
